--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mdx-js/react": "^1.5.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "mdx.macro": "^0.2.9",
+    "raw.macro": "^0.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "spectacle": "^6.0.2",
+    "use-local-storage-state": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
