--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "serve": "^11.3.0",
     "spectacle": "^6.0.2",
     "use-local-storage-state": "^2.0.0"
   },
